--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -102,10 +102,10 @@ header {
 
 
 /* Special styling for IPTV player */
-.video-container.iptv-player {
+/* .video-container.iptv-player {
   background-color: #0f1620;
   border: 2px solid #2c5282;
-}
+} */
 
 .video-container.expanded {
   position: fixed;
